--- a/styles.css
+++ b/styles.css
@@ -15,27 +15,60 @@ body {
     padding: 10px;
     text-align: center;
     justify-content: center;
+    position: fixed;
+    width: 100%;
+    
+  }
+  header h1 {
+    font-size: 40px;
+    
   }
   
   nav {
-    float: right;
     padding: 30px;
     font-family: Arial, sans-serif;
     color: black;
     display: flex;
     justify-content:center ;
     flex-direction: row;
-    align-items: flex-end;
-    margin-left: 50%;
+    align-items: center;
+    margin-top: 80px;
+    background-color: lightblue;
+    width: 100%;
+    height: 50px;
+    
+    
     
   }
   
-  nav a {
-    color: #000; 
-    text-decoration: none;
-    margin-left: 15px;
-    padding: 30px;
+  .nav-list {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+    align-items: center;
+    flex-direction: row;
+    padding: 20px;
+    margin-top: 50px;
   }
+  .nav-list a {
+    text-decoration: none;
+  }
+
+  a {
+    text-decoration: none;
+    padding: 20px;
+    color: black;
+    font-size: 20px;
+  }
+  a:visited{
+    color: rgb(66, 44, 87);
+  }
+  a:hover {
+    color: rgb(157, 92, 218);
+  }
+  
+  
   
   section {
     display: flex;
@@ -44,7 +77,8 @@ body {
   align-items: center; 
   padding: 20px;
   padding-top: 10px;
-  background-color: azure;
+  background-color: #333;
+  width: 100%;
     
 
   }
@@ -54,30 +88,39 @@ body {
     text-align: center; 
     justify-content: center;
     margin: 10px;
-    width: 1000px;
+    width: 100%;
     font-size: larger; 
+    background-color: rgb(243, 243, 232);
   }
   
   footer {
-    background-color: #333;
+    background-color: #1d1d1d;
     color: #fff;
     text-align: center;
+    align-items: center;
     padding: 10px;
-    position: fixed;
-    bottom: 0;
     width: 100%;
     font-style: italic;
     height: 30px;
     justify-content: center;
     flex-direction: row;
+    
+    margin-top:px;
   }
+  
   #block1 {
     display: flex;
     text-align: center; 
     justify-content: center;
     flex-direction: column;
     margin: 10px;
-    width: 500px;
+    width: 1000px;
+    background-color: rgb(243, 255, 235);
+    border: 2px solid black;
+    border-radius: 10px;
+    border-width: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    
     
     
   }
@@ -87,16 +130,38 @@ body {
     justify-content: center;
     flex-direction: column;
     margin: 10px;
-    width: 500px
+    width: 800px;
+    background-color: rgb(243, 255, 235);
+    border: 2px solid black;
+    border-radius: 10px;
+    border-width: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     
 
   }
-  #block3{
+  #block3 {
     display: flex;
     text-align: center; 
     justify-content: center;
     flex-direction: column;
     margin: 10px;
     width: 500px;
-   
+    height: 200px;
+    
+    background-color: rgb(243, 255, 235);
+    border: 2px solid black;
+    border-radius: 10px;
+    border-width: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+     
   }
+  #footer-p {
+   padding-bottom: 50px;
+   margin-bottom: 20px;
+     
+  }
+    
+   
+  
+  
+  
