--- a/styles3.css
+++ b/styles3.css
@@ -12,4 +12,19 @@ header {
     padding: 10px;
     text-align: center;
     justify-content: center;
+    position: fixed;
+    width: 100%;
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+  }
+  .block{
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
   }
