--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,23 @@
 body {
+    overflow-x: hidden;
+    overflow-y: auto;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    background-color: beige;
+    background-image:url(assets/music-studio-background-unfxpvrvshdeynte.jpg);
+    
+  }
+  html{
+    padding: 0;
+    margin: 0;
   }
   
   header {
     display: flex;
-    background-color: #333;
+    flex-wrap: wrap;
+    background-color: #1d1d1d;
     color: #fff;
     text-align: center;
     padding: 10px;
@@ -17,26 +25,35 @@ body {
     justify-content: center;
     position: fixed;
     width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+    -webkit-text-stroke-width:2px ;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
     
   }
   header h1 {
-    font-size: 40px;
+    font-size: 35px;
     
   }
   
   nav {
+    
     padding: 30px;
     font-family: Arial, sans-serif;
-    color: black;
+    color: rgb(255, 255, 255);
     display: flex;
+    margin: auto;
     justify-content:center ;
     flex-direction: row;
     align-items: center;
-    margin-top: 80px;
-    background-color: lightblue;
-    width: 100%;
+    margin-top: 118px;
+    background-color: rgb(0, 0, 0);
+    width: 79%;
     height: 50px;
-    
+    border: 2px solid black;
+    border-radius: 20px;
+    border-width: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     
     
   }
@@ -44,25 +61,29 @@ body {
   .nav-list {
     display: flex;
     justify-content: center;
+    justify-content: space-between;
     list-style-type: none;
     padding: 0;
     align-items: center;
     flex-direction: row;
     padding: 20px;
-    margin-top: 50px;
+    color: rgb(255, 255, 255);
+    
   }
   .nav-list a {
     text-decoration: none;
+    color: rgb(255, 255, 255);
   }
 
   a {
     text-decoration: none;
     padding: 20px;
-    color: black;
-    font-size: 20px;
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+    margin: 0 70px;
   }
   a:visited{
-    color: rgb(66, 44, 87);
+    color: rgb(200, 176, 223);
   }
   a:hover {
     color: rgb(157, 92, 218);
@@ -72,13 +93,17 @@ body {
   
   section {
     display: flex;
+    margin: auto;
   flex-direction: column;
   justify-content: center; 
   align-items: center; 
   padding: 20px;
   padding-top: 10px;
-  background-color: #333;
-  width: 100%;
+  
+  width: 80%;
+  border:10px solid #000000;
+  background-image:url(assets/550729.jpg);
+ 
     
 
   }
@@ -88,9 +113,15 @@ body {
     text-align: center; 
     justify-content: center;
     margin: 10px;
-    width: 100%;
+    width: 70%;
     font-size: larger; 
-    background-color: rgb(243, 243, 232);
+    background-color: #1d1d1d;
+    background-size: cover;
+    background-position: center;
+    border: 2px solid black;
+    border-radius: 10px;
+    border-width: 10px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.5);
   }
   
   footer {
@@ -104,8 +135,6 @@ body {
     height: 30px;
     justify-content: center;
     flex-direction: row;
-    
-    margin-top:px;
   }
   
   #block1 {
@@ -114,11 +143,11 @@ body {
     justify-content: center;
     flex-direction: column;
     margin: 10px;
-    width: 1000px;
-    background-color: rgb(243, 255, 235);
+    width: 900px;
+    background-color: rgb(255, 255, 255);
     border: 2px solid black;
-    border-radius: 10px;
-    border-width: 10px;
+    border-radius: 5px;
+    border-width: 5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     
     
@@ -131,10 +160,10 @@ body {
     flex-direction: column;
     margin: 10px;
     width: 800px;
-    background-color: rgb(243, 255, 235);
+    background-color: rgb(255, 255, 255);
     border: 2px solid black;
-    border-radius: 10px;
-    border-width: 10px;
+    border-radius: 5px;
+    border-width: 5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     
 
@@ -148,16 +177,16 @@ body {
     width: 500px;
     height: 200px;
     
-    background-color: rgb(243, 255, 235);
+    background-color: rgb(255, 255, 255);
     border: 2px solid black;
-    border-radius: 10px;
-    border-width: 10px;
+    border-radius: 5px;
+    border-width: 5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
      
   }
   #footer-p {
-   padding-bottom: 50px;
-   margin-bottom: 20px;
+   margin-bottom: 10px;
+   
      
   }
     
