--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
+
 body {
     overflow-x: hidden;
     overflow-y: auto;
-    font-family: Arial, sans-serif;
+    font-family: 'Bitter', serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    background-image:url(assets/music-studio-background-unfxpvrvshdeynte.jpg);
+    background-image:url(assets/pierun.jpg);
+    background-size: cover;
     
   }
   html{
@@ -27,8 +29,7 @@ body {
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
-    -webkit-text-stroke-width:2px ;
-    -webkit-text-stroke-color: rgb(0, 0, 0);
+    
     
   }
   header h1 {
@@ -102,10 +103,15 @@ body {
   
   width: 80%;
   border:10px solid #000000;
+  border-radius: 10px;
   background-image:url(assets/550729.jpg);
  
     
 
+  }
+  h2 {
+    margin-bottom: 0px;
+    margin-top: 10px;
   }
   
   .block {
@@ -115,7 +121,7 @@ body {
     margin: 10px;
     width: 70%;
     font-size: larger; 
-    background-color: #1d1d1d;
+    background-color: #000000;
     background-size: cover;
     background-position: center;
     border: 2px solid black;
@@ -174,7 +180,7 @@ body {
     justify-content: center;
     flex-direction: column;
     margin: 10px;
-    width: 500px;
+    width: 1000px;
     height: 200px;
     
     background-color: rgb(255, 255, 255);
